<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_plus">+</string>
    <string name="num_minus">-</string>
    <string name="num_multi">*</string>
    <string name="num_div">/</string>
    <string name="num_equal">=</string>
    <string name="num_point">.</string>
    <string name="calculator">线性布局 计算器</string>
    <string name="FrameLayoutTest">帧布局</string>
    <string name="RelativeLayoutTest">相对布局 计算器</string>
    <string name="GridLayoutTest">网格布局 计算器</string>
    <string name="TableLayoutTest">表格布局+相对布局 计算器</string>
    <string name="textview">练习TextView练习TextView练习TextView练习TextView练习TextView练习TextView练习TextView练习TextView</string>
    <string name="listener">五类监听方法</string>
    <string name="inner">内部类监听</string>
    <string name="anonymousInner">匿名内部类监听</string>
    <string name="innerMember">内部类成员监听</string>
    <string name="activity">activity监听</string>
    <string name="xml">xml监听</string>
    <string name="login">登录</string>
    <string name="login_username">用户名：</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="reset">重置</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex">性别</string>
    <string name="hobby">爱好</string>
    <string name="hobby_0">看电视</string>
    <string name="hobby_1">看书</string>
    <string name="hobby_2">睡觉</string>
    <string name="progressbar0">默认ProgressBar样式</string>
    <string name="progressbar1">自定义ProgressBar样式</string>
    <string name="seekbar">自定义样式的SeekBar</string>
    <string name="customRatingBar">自定义样式的RatingBar</string>
    <string name="defaultRatingBar">默认样式的RatingBar</string>
    <string name="show_dialog">显示对话框</string>
    <string name="show_custom_dialog">"显示自定义view对话框"</string>
    <string name="show_single_dialog">显示单选列表对话框</string>
    <string name="show_multi_dialog">显示多选列表对话框</string>
    <string name="show_adapter_dialog">显示adapter类对话框</string>
    <string name="show_datepicker_dialog">显示日期选择对话框</string>
    <string name="show_timepicker_dialog">显示时间对话框</string>
    <string name="show_progress_dialog">显示进度条对话框</string>
    <string name="show_activity_dialog">Activity做dialog</string>
    <string name="show_my_dialog">自定义的dialog</string>
    <string name="show_custom_theme_dialog">自定义风格的AlertDialog</string>
    <string name="show_custom_style_dialog">显示自定义样式的对话框</string>
    <string name="onPause">onPause&#8212;&#8212;>onResume,失去焦点，但可见</string>
    <string name="onDestroy">onDestroy,finish()</string>
    <string name="onStop">onPause&#8212;&#8212;>onStop&#8212;&#8212;>onRestart&#8212;&#8212;>onStart&#8212;&#8212;>onResume,失去焦点，且可见</string>
    <string name="send">计算</string>
    <string name="input">请输入需要计算的斐波拉契数列的项数</string>
    <string name="jumpSelf">跳转到自己</string>
    <string name="jumpOther">跳转到其他</string>
    <string name="jumpBack">跳转回去</string>
    <string name="showNotification">显示通知</string>
    <string name="cancelNotification">取消通知</string>
    <string name="showCustomNotification">显示自定义通知</string>
    <string name="cancelCustomNotification">取消自定义通知</string>
    <string name="showPopupWindow">显示漂浮窗口</string>
    <string name="download">当前下载进度</string>
    <string name="bias">/</string>
    <string name="scaleX">scaleX</string>
    <string name="scaleXY">scaleXY</string>
    <string name="together">多动画同时执行</string>
    <string name="linear">多动画顺序执行</string>
    <string name="viewAnimator">viewAnimator</string>
    <string name="propertyHolder">propertyHolder</string>
    <string name="chat">聊天</string>
    <string name="friends">好友</string>
    <string name="group">分组</string>
    <string name="dynamic">动态</string>
    <string name="strAdd">Add&#160;a&#160;button</string>
    <string name="appearing">APPEARING</string>
    <string name="changeAppearing">CHANGE_APPEARING</string>
    <string name="disappearing">DISAPPEARING</string>
    <string name="changeDisappearing">CHANGE_DISAPPEARING</string>
    <string name="vertical">垂直</string>
    <string name="parabola">抛物线</string>
    <string name="fadeOutDel">淡出删除</string>
    <string name="onTouchEvent">点击触发事件</string>
    <string name="ad">广告</string>
    <string name="homepage">首页</string>
    <string name="script">文字</string>
    <string name="image">图片</string>
    <string name="angryBirds">AngryBirds</string>
    <string name="writeLog">写日志</string>
    <string name="logList">日志列表</string>
    <string name="modify">修改&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="delete">删除&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="RMB">￥</string>
    <string name="current_mplitude">修改中等振幅，当前%1$s</string>
    <string name="current_Disparity">修改振幅差距，当前%1$s</string>
    <string name="current_float_time">修改移动速度，当前%1$s</string>
    <string name="current_rotate_time">修改旋转速度，当前%1$s</string>

    <string name="turnon">开灯</string>
    <string name="turnoff">关灯</string>

    <string name="recyclerView0">Listview</string>
    <string name="recyclerView1">纵向GridView</string>
    <string name="recyclerView2">横向GridView</string>
    <string name="recyclerView3">瀑布流</string>

</resources>