<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_1" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_1"
        android:text="@string/num_2" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_2"
        android:text="@string/num_3" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_3"
        android:text="@string/num_plus" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_1"
        android:text="@string/num_4" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_2"
        android:layout_toRightOf="@id/btn_4"
        android:text="@string/num_5" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_3"
        android:layout_toRightOf="@id/btn_5"
        android:text="@string/num_6" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_plus"
        android:layout_toRightOf="@id/btn_6"
        android:text="@string/num_minus" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_4"
        android:text="@string/num_7" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_5"
        android:layout_toRightOf="@id/btn_7"
        android:text="@string/num_8" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_6"
        android:layout_toRightOf="@id/btn_8"
        android:text="@string/num_9" />

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_minus"
        android:layout_toRightOf="@id/btn_9"
        android:text="@string/num_multi" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_7"
        android:layout_alignRight="@id/btn_8"
        android:layout_below="@id/btn_7"
        android:text="@string/num_0" />

    <Button
        android:id="@+id/btn_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_9"
        android:layout_below="@id/btn_9"
        android:text="@string/num_point" />

    <Button
        android:id="@+id/btn_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_0"
        android:layout_alignRight="@id/btn_9"
        android:layout_below="@id/btn_0"
        android:text="@string/num_equal" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btn_equal"
        android:layout_alignLeft="@id/btn_multi"
        android:layout_alignRight="@id/btn_multi"
        android:layout_below="@id/btn_multi"
        android:layout_toRightOf="@id/btn_point"
        android:text="@string/num_div" />

</RelativeLayout>