<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/show_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_dialog" />

        <Button
            android:id="@+id/show_custom_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_custom_dialog" />

        <Button
            android:id="@+id/show_single_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_single_dialog" />

        <Button
            android:id="@+id/show_multi_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_multi_dialog" />

        <Button
            android:id="@+id/show_adapter_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_adapter_dialog" />

        <Button
            android:id="@+id/show_datepicker_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_datepicker_dialog" />

        <Button
            android:id="@+id/show_timepicker_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_timepicker_dialog" />

        <Button
            android:id="@+id/show_progress_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_progress_dialog" />

        <Button
            android:id="@+id/show_activity_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_activity_dialog" />

        <Button
            android:id="@+id/show_my_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_my_dialog" />

        <Button
            android:id="@+id/show_custom_theme_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_custom_theme_dialog" />

        <Button
            android:id="@+id/show_custom_style_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:background="@drawable/btn_background"
            android:text="@string/show_custom_style_dialog" />
    </LinearLayout>

</ScrollView>