<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lv_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/id_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:background="@drawable/btn_background"
        android:text="@string/strAdd" />

    <CheckBox
        android:id="@+id/id_chk_appearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/appearing" />

    <CheckBox
        android:id="@+id/id_chk_change_appearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/changeAppearing" />

    <CheckBox
        android:id="@+id/id_chk_disappearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/disappearing" />

    <CheckBox
        android:id="@+id/id_chk_change_disappearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/changeDisappearing" />

</LinearLayout>