<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bird_7" />

    <Button
        android:id="@+id/btnScaleX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dip"
        android:background="@drawable/btn_background"
        android:padding="2dip"
        android:text="@string/scaleX" />

    <Button
        android:id="@+id/btnScaleXY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dip"
        android:layout_toRightOf="@id/btnScaleX"
        android:background="@drawable/btn_background"
        android:padding="2dip"
        android:text="@string/scaleXY" />

</RelativeLayout>